docs: hide overflow on Hero as huge logo causes page size issues

--- a/docs/src/components/Pages/Home/Hero/Hero.scss
+++ b/docs/src/components/Pages/Home/Hero/Hero.scss
@@ -10,6 +10,8 @@
 	font-weight     : 700;
 	color           : $color-white;
 	text-align      : center;
+	position        : relative;
+	overflow        : hidden;
 
 	&__text-wrapper {
 		position  : relative;
